5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1836_1280.log
== SUBMITION (2019-07-02 03:28:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.632159
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:28:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.79897
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:30:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.733906
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:30:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.671315
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:30:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.64869
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:30:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.803652
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:32:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.881597
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 03:33:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.639671
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 04:52:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.814868
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 04:52:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- EXECUTION TIME:
0.647623
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 04:52:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		 if tabuleiro[ytab,xtab]==33:
		  xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
	
		  


-- ERROR:
File "XXXX", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 05:12:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x == "A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- ERROR:
File "XXXX", line 11
    if x == "A":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 05:13:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- EXECUTION TIME:
0.786109
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    if x=="A":
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 05:13:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- ERROR:
File "XXXX", line 11
    if x=="A":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 05:14:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
	if (x=="A"):
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- ERROR:
File "XXXX", line 11
    if (x=="A"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 05:14:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
for x in mov:
	if (x=="A"):
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- EXECUTION TIME:
0.764976
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    for x in mov:
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 05:14:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
for x in mov:
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- ERROR:
File "XXXX", line 11
    for x in mov:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 05:16:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
for x in mov:
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- EXECUTION TIME:
0.608061
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    for x in mov:
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 05:16:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
for x in mov:
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- EXECUTION TIME:
0.779064
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 11
    for x in mov:
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 05:16:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
for x in mov:
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- ERROR:
File "XXXX", line 11
    for x in mov:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:31:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
tabuleiro=array(eval(input("digite: ")))
mov=input("movimento: ")
xtab=0
ytab=0
moeda=0
life=100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro[0]-1
for x
		  in mov:
	if x=="A":
		xtab=xtab-1
		if xtab<0:
			xtab=xtab+1
		if tabuleiro[ytab,xtab]==33:
			xtab=xtab+1
	elif x=="D":
		  xtab=xtab+1
		  if xtab>a:
		  	xtab=xtab-1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x=="W":
		  ytab=ytab-1
		  if ytab<0:
		  	ytab=ytab+1
		  if tabuleiro[ytab,xtab]==33:
		  	xtab=xtab-1
	elif x =="S":
		  ytab=ytab+1
		  if ytab>b:
		  	ytab=ytab-1
		  if tabuleiro[ytab,xtab]==33:
		  	ytab=ytab-1
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif tabuleiro[ytab,xtab]==22:
		life=life-5
		  
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
		  	
		  


-- EXECUTION TIME:
0.568186
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 12
    in mov:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:34:52) 
-- CODE:
from numpy import*
tabuleiro = array(eval(input("tabuleiro: ")))
mov = input("movimentos: ")
xtab = int(0)
ytab = int(0)
moeda = 0
life = 100
a = shape(tabuleiro)[1] - 1
b = shape(tabuleiro)[0] - 1
for x in mov:
	
	if x == "A":
		xtab = xtab - 1
		if xtab<0:
			xtab = xtab + 1
		if tabuleiro[ytab,xtab] ==33:
			xtab = xtab + 1
			
			
	elif x == "D":
		xtab = xtab + 1
		if xtab>a:
			xtab = xtab - 1
		if tabuleiro[ytab,xtab] ==33:
			xtab= xtab - 1
			
			
	elif x == "W":
		ytab =ytab - 1
		if ytab<0:
			ytab = ytab + 1
		if tabuleiro[ytab,xtab] ==33:
			ytab = ytab + 1
			
			
	elif x == "S":
		ytab= ytab + 1
		if ytab>b:
			ytab=ytab - 1
		if tabuleiro[ytab,xtab] ==33:
			ytab = ytab - 1
			
			
	if tabuleiro[ytab,xtab] ==11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	
	
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.742699
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
